--- a/backend/ecom/store/templates/public_impact.html
+++ b/backend/ecom/store/templates/public_impact.html
@@ -57,12 +57,12 @@
                 <a href="{% url 'donation_page' %}" class="btn btn-primary btn-lg me-3">
                     <i class="bi bi-heart-fill me-2"></i> Donate Now
                 </a>
-                <a href="#" class="btn btn-outline-secondary btn-lg">
+                <a href="#footer-subscribe" class="btn btn-outline-secondary btn-lg">
                     Newsletter for Stakeholders
                 </a>
             </p>
         </div>
     </div>
-</div>
 
+    </div>
 {% endblock content %}
